@@ -24,4 +24,3 @@ retracers:
 
 retrace failures:
  - #124082: CoreDump.gz not removed
- - #124215: Traceback cannot be read from description field
