@@ -19,6 +19,9 @@ apport (0.89) UNRELEASED; urgency=low
     report parameter, since we will need it there in the future. Remove
     explicit call from bin/crash-digger and instead change check_duplicate()
     to call it on its own.
+  * apport/crashdb_impl/launchpad.py, download(): Replace dodgy parsing of
+    fields from the description with proper code, so that multi-line fields
+    are read correctly, too.
   * apport/crashdb_impl/launchpad.py: Implement private crash bug handling,
     according to https://wiki.ubuntu.com/CrashReporting:
     - upload(): If we have an Ubuntu bug, mark it as private and only
@@ -33,7 +36,7 @@ apport (0.89) UNRELEASED; urgency=low
       benefit from it at all. We have to live with this until LP grows a real
       crash database.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 05 Jul 2007 19:42:43 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 05 Jul 2007 23:04:26 +0200
 
 apport (0.88) gutsy; urgency=low
 
